@@ -6,7 +6,7 @@
 ..      ..  ..    ........  ..      ..  ..    ..    ..    ......      ......    ..      ..
 
 HighMoon - Duel in Space.
-Copyright (c) 2005, Patrick Gerdsmeier <patrick@gerdsmeier.net>
+Copyright (c) 2005, 2006 Patrick Gerdsmeier <patrick@gerdsmeier.net>
 
 http://highmoon.gerdsmeier.net
 
@@ -15,7 +15,7 @@ Author of the game is Patrick Gerdsmeier.
 
 
 HighMoon - Duell im All.
-Copyright (c) 2005, Patrick Gerdsmeier <patrick@gerdsmeier.net>
+Copyright (c) 2005, 2006 Patrick Gerdsmeier <patrick@gerdsmeier.net>
 
 http://highmoon.gerdsmeier.net
 
