@@ -6,13 +6,13 @@
 ..      ..  ..    ........  ..      ..  ..    ..    ..    ......      ......    ..      ..
 
 HighMoon - Duel in Space.
-Copyright (c) 2005, Patrick Gerdsmeier <patrick@gerdsmeier.net>
+Copyright (c) 2005, 2006 Patrick Gerdsmeier <patrick@gerdsmeier.net>
 
 The game needs the SDL library. If it's not installed on your
 computer, you can download it at http://www.libsdl.org.
 
-To compile the sources you need a C++ Compiler. I used GNU
-g++ 3.4.4 and 4.0.1 which you can get at http://www.gnu.org/software/gcc.
+To compile the sources you need a C++ Compiler. I used latest GNU
+g++ which you can get at http://www.gnu.org/software/gcc.
 
 Move to the sources Path and type:
 	
@@ -34,14 +34,14 @@ Type make uninstall to remove all installed files.
 
 
 HighMoon - Duell im All.
-Copyright (c) 2005, Patrick Gerdsmeier <patrick@gerdsmeier.net>
+Copyright (c) 2005, 2006 Patrick Gerdsmeier <patrick@gerdsmeier.net>
 
 Das Spiel benoetigt die SDL-Bibliothek. Falls die nicht
 installiert ist, kann man sie bei http://www.libsdl.org
 downloaden.
 
 Zum Kompilieren der Quellen braucht man einen C++-Compiler.
-Ich habe den GNU g++ 3.4.4 und 4.0.1 benutzt, den man unter
+Ich habe den neusten GNU g++, den man unter
 http://www.gnu.org/software/gcc bekommen kann.
 
 Im Verzeichnis der Quellen reicht ein einfaches:
