@@ -6,7 +6,7 @@
 ..      ..  ..    ........  ..      ..  ..    ..    ..    ......      ......    ..      ..
 
 HighMoon - Duel in Space.
-Copyright (c) 2005, Patrick Gerdsmeier <patrick@gerdsmeier.net>
+Copyright (c) 2005, 2006 Patrick Gerdsmeier <patrick@gerdsmeier.net>
 
 http://highmoon.gerdsmeier.net/
 
@@ -101,4 +101,4 @@ TASTATURKOMMANDOS SIND:
 
 Installations- und Compileanleitung stehen in der INSTALL-Datei.
 
-January 2005 - Patrick Gerdsmeier <patrick@gerdsmeier.net>
+Januar 2005 - Patrick Gerdsmeier <patrick@gerdsmeier.net>
