@@ -8,6 +8,14 @@
 HighMoon - Duell im All.
 Copyright (c) 2005, Patrick Gerdsmeier <patrick@gerdsmeier.net>
 
+2006 March 25
+----------------
+HighMoon v1.2.4 - Added Support for Netherland Language (Thanks to
+L. Scheelings).
+
+HighMoon v1.2.4 - Niederlaendische Uebersetzung hinzugefuegt (Danke
+an L. Scheelings).
+
 2005 July 27
 ----------------
 HighMoon v1.2.3 - Added Support for Italian Language (Thanks to
